--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="/media/favicon.ico">
     <title>Zesty Tasty- Restaurant</title>
-    <meta name="description" content="The best veg hotel in Chennai that always uses fresh high quality ingredients. Affordable price">
+    <meta name="description" content="European Restaurant">
 </head>
 <body>
     <div class="landing">
